# my-canister-dapp

./: .env.development  .gitignore  .npmrc  .prettierrc.json  CLAUDE.md  Cargo.toml  README.md  RELEASING.md  SPEC.md  TEST-PLAN.md  TESTING_AUDIT.md  canister_ids.json  dfx.json  eslint.config.js  icp.yaml  knip.json  my-canister-dapp.code-workspace  package-lock.json  package.json  playwright.config.ts  syncpack.config.json  tsconfig.json  validate-and-test-all.sh
.changeset/: add-top-up-rule-and-move-declarations.md  bump-vite-plugin-align-versions.md  clean-env-examples.md  clever-months-drop.md  cold-apples-cough.md  common-pumas-slide.md  config.json  configurable-plugin-features.md  dashboard-hardening-and-deps.md  eighty-onions-punch.md  feat-canister-logs-in-dashboard.md  fix-dashboard-deps-and-idl.md  hip-comics-look.md  hip-rats-jam.md  large-jars-shake.md  light-mails-smash.md  make-docs-visible.md  nice-cloths-jog.md  nice-stars-double.md  strong-carrots-feel.md  twenty-groups-begin.md  update-ii-provider-url.md  vite-plugin-v1.md
.devcontainer/: Containerfile  devcontainer.json
candid/: my-canister.did
canisters/: icp.yaml
canisters/demos/: Cargo.toml  demos.did
canisters/demos/src/: codes.rs  dashboard_calls.rs  guards.rs  ic_management.rs  lib.rs  pool.rs  redeem.rs  storage.rs  timers.rs  wasm_registry.rs
canisters/wasm-registry/: Cargo.toml
canisters/wasm-registry/src/: lib.rs  storage.rs  validation.rs
dfx-env/: Cargo.toml  README.md  deploy-all.sh  deploy-local-ledger.sh  dfx.json
dfx-env/fake-cmc/: Cargo.toml  fake-cmc.did
dfx-env/fake-cmc/fake-cmc/src/: fake_cmc.rs  lib.rs
dfx-env/fake-cmc/src/: canister.rs  fake_cmc.rs  helpers.rs  lib.rs  main.rs
docs/: CANISTER_UPGRADE_ADVISORY.md  DASHBOARD_REFACTOR_PLAN.md  MY-CANISTER-DASHBOARD.SPEC.md  SPEC.md  TESTING_AUDIT.md  ai-backend-reference.md  ai-cli-and-testing.md  ai-frontend-reference.md  ai-overview.md  ai-project-setup.md  demos-feature.md  derive-ii-principal-ci-lessons.md  llms.txt
examples/: icp.yaml
examples/my-hello-world/src/my-hello-world/: Cargo.toml  build.rs  my-hello-world.did
examples/my-hello-world/src/my-hello-world/src/: lib-ng.rs  lib.rs
examples/my-notepad/src/backend/: Cargo.toml  build.rs  my-notepad.did
examples/my-notepad/src/backend/src/: lib.rs
my-canister-app/: .gitignore  .prettierignore  README.md  canister-creation-flow.md  eslint.config.js  package.json  svelte.config.js  tsconfig.json  vite.config.ts
my-canister-dapp-js/: vite-plugin-dapp-config.js
my-canister-dapp-rs/canister-dapp-cli/: Cargo.toml  README.md
my-canister-dapp-rs/canister-dapp-cli/src/: main.rs
my-canister-dapp-rs/canister-dapp-test/: .gitignore  CHANGELOG.md  Cargo.toml  README.md
my-canister-dapp-rs/canister-dapp-test/src/: lib.rs  main.rs
my-canister-dapp-rs/canister-dapp-test/tests/: canister_dapp_test.rs
my-canister-dapp-rs/my-canister-dashboard/: CHANGELOG.md  Cargo.toml  README.md  build.rs
my-canister-dapp-rs/my-canister-dashboard/assets/: index.html  index.js  style.css
my-canister-dapp-rs/my-canister-dashboard/frontend/: package.json  tsconfig.json
my-canister-dapp-rs/my-canister-dashboard/frontend/src/: constants.ts  copy.ts  utils.ts
my-canister-dapp-rs/my-canister-dashboard/frontend/src/api/: cmc.ts
my-canister-dapp-rs/my-canister-dashboard/frontend/src/components/: status.ts
my-canister-dapp-rs/my-canister-dashboard/frontend/test/: top-up-rule.test.ts
my-canister-dapp-rs/my-canister-dashboard/frontend/test/api/: management.test.ts
my-canister-dapp-rs/my-canister-dashboard/src/: lib.rs
my-canister-dapp-rs/my-canister-dashboard/src/dashboard/: alternative_origins.rs  ii_principal.rs  mod.rs  top_up_rule.rs
my-canister-dapp-rs/my-canister-dashboard/src/guards/: mod.rs
my-canister-dapp-rs/my-canister-dashboard/src/setup/: mod.rs
my-canister-dapp-rs/my-canister-frontend/: CHANGELOG.md  Cargo.toml  README.md
my-canister-dapp-rs/my-canister-frontend/src/: asset_router.rs  lib.rs
packages-rs/demos-test/: Cargo.toml
packages-rs/demos-test/src/: main.rs
packages-rs/my-canister-dapp-cli/: CHANGELOG.md  Cargo.toml  README.md
packages-rs/my-canister-dapp-cli/auth-js/: cli-auth.iife.js  cli-auth.ts  package-lock.json  package.json  vite.config.ts
packages-rs/my-canister-dapp-cli/playwright-js/: derive-ii-principal.iife.js  derive-principal.mjs
packages-rs/my-canister-dapp-cli/src/: icp.rs  main.rs
packages-rs/my-canister-dapp-cli/src/auth/: mod.rs  page.rs  server.rs
packages-rs/my-canister-dapp-cli/src/commands/: deploy.rs  derive_ii_principal.rs  mod.rs  test.rs
packages-rs/my-canister-dapp-test/: CHANGELOG.md  Cargo.toml  README.md  asset-hashes.json
packages-rs/my-canister-dapp-test/src/: lib.rs
packages-rs/my-canister-dashboard/: CHANGELOG.md  Cargo.toml  README.md  asset-hashes.json
packages-rs/my-canister-dashboard/assets/: index.html  index.js
packages-rs/my-canister-dashboard/frontend/: .gitignore  package.json  vite.config.ts
packages-rs/my-canister-dashboard/frontend/src/: dom.ts  index.html  utils.ts
packages-rs/my-canister-dashboard/frontend/src/components/: status.ts  top-up-rule.ts
packages-rs/my-canister-dashboard/frontend/src/store/: statusStore.ts
packages-rs/my-canister-dashboard/frontend/test/: helpers.test.ts  utils.test.ts
packages-rs/my-canister-dashboard/src/: lib.rs
packages-rs/my-canister-dashboard/src/dashboard/: alternative_origins.rs  mod.rs  top_up_rule.rs  wasm_status.rs
packages-rs/my-canister-frontend/: CHANGELOG.md  Cargo.toml  README.md
packages-rs/my-canister-frontend/src/: asset_router.rs  lib.rs
scripts/: 01-check.sh  02-bootstrap.sh  03-build.sh  04-deploy.sh  05-test.sh  add-asset-hash-entry.sh  build-all-wasm.sh  build-examples.sh  build-wasms-dev.sh  build-wasms-prod.sh  build-wasms.sh  check.sh  clean.sh  constants.sh  copy-dashboard-assets-to-crate.sh  copy-example-wasm.sh  create-canister-dapp-dev-env.sh  deploy-app.sh  deploy-launcher.sh  deploy-system-canisters.sh  deploy-test-ii.sh  encode-upload-arg.mjs  generate-declarations.sh  generate-env.sh  (+15 more)
(+413 files in other folders)
