[workspace]
members = [
    "packages-rs/my-canister-dashboard",
    "packages-rs/my-canister-frontend",
    "packages-rs/my-canister-dapp-test",
    "examples/my-hello-world/src/backend",
    "examples/my-notepad/src/backend",
    "canisters/wasm-registry",
    "canisters/demos",
    "tests/demos-test",
    "packages-rs/my-canister-dapp-cli",
]
resolver = "2"

[workspace.package]
edition = "2024"
license = "MIT"
authors = ["Web3NL"]
repository = "https://github.com/Web3NL/my-canister-dapp"

[workspace.dependencies]
candid = "0.10.24"
hex = "0.4.3"
ic-asset-certification = "3.1.0"
ic-cdk = "0.19.0"
ic-cdk-timers = "1.0.0"
ic-http-certification = "3.1.0"
ic-ledger-types = "0.16.0"
include_dir = "0.7.4"
icrc-ledger-types = "0.1.12"
mime_guess = "2.0.5"
pocket-ic = "12.0.0"
serde = { version = "1.0.228", features = ["derive"] }
serde_cbor = "0.11.2"
serde_json = "1.0.149"
sha2 = "0.10.9"
num-traits = "0.2.19"
clap = { version = "4", features = ["derive"] }
flate2 = "1.1"
anyhow = "1"
tiny_http = "0.12"
open = "5"
my-canister-dapp-test = { path = "packages-rs/my-canister-dapp-test", version = "0.2.0" }
