[package]
name = "wasm-registry"
version = "0.1.0"
edition = { workspace = true }
license = { workspace = true }
authors = { workspace = true }

[lib]
crate-type = ["cdylib"]

[dependencies]
candid.workspace = true
ic-cdk.workspace = true
serde.workspace = true
sha2.workspace = true
hex.workspace = true
