[package]
name = "fake-cmc"
version = "0.1.0"
edition.workspace = true
license.workspace = true
authors.workspace = true

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
candid.workspace = true
candid_parser.workspace = true
ic-cdk.workspace = true
serde_bytes.workspace = true
serde_derive.workspace = true
serde.workspace = true
ic-ledger-types.workspace = true
