[package]
name = "fake-cmc"
version = "0.1.0"
edition = "2021"
authors = ["Samer"]
license = "MIT"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
candid = "0.10.20"
candid_parser = "0.2.1"
ic-cdk = "0.19.0"
ic-ledger-types = "0.16.0"
icrc-ledger-types = "0.1.12"
serde_bytes = "0.11.19"
serde_derive = "1.0.228"
serde = { version = "1.0.228", features = ["derive"] }
