[package]
name = "canister-dapp-test"
version = "0.1.0"
description = "Test for wasm binaries compatible with my-canister-dashboard"
edition = { workspace = true }

[dependencies]
candid = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
sha2 = { workspace = true }
hex = { workspace = true }

[dev-dependencies]
ic-cdk = { workspace = true }
pocket-ic = { workspace = true }
ic-http-certification = { workspace = true }
ic-ledger-types = { workspace = true }
flate2 = "1"

my-canister-dashboard = { path = "../my-canister-dashboard" }


[package.metadata.release]
pre-release-replacements = [
    # Replace the "Unreleased" header with the new version and date
    { file = "CHANGELOG.md", search = "## \\[Unreleased\\]", replace = "## [{{version}}] - {{date}}", exactly = 1 },

    # Optional: keep an "Unreleased" section at the top after tagging
    { file = "CHANGELOG.md", search = "(?m)^# Changelog\\n", replace = "# Changelog\n\n## [Unreleased]\n", exactly = 1 },
]
