[package]
name = "canister-dapp-test"
version = "0.2.0"
description = "Acceptance suite for WASM binaries built with my-canister-dashboard"
edition = { workspace = true }

[[bin]]
name = "canister-dapp-test"
path = "src/main.rs"

[dependencies]
candid = { workspace = true }
clap = { workspace = true }
hex = { workspace = true }
ic-cdk = { workspace = true }
ic-http-certification = { workspace = true }
ic-ledger-types = { workspace = true }
pocket-ic = { workspace = true }
serde_json = { workspace = true }
sha2 = { workspace = true }

my-canister-dashboard = { path = "../my-canister-dashboard" }

[package.metadata.release]
pre-release-replacements = [
    # Replace the "Unreleased" header with the new version and date
    { file = "CHANGELOG.md", search = "## \\[Unreleased\\]", replace = "## [{{version}}] - {{date}}", exactly = 1 },

    # Optional: keep an "Unreleased" section at the top after tagging
    { file = "CHANGELOG.md", search = "(?m)^# Changelog\\n", replace = "# Changelog\n\n## [Unreleased]\n", exactly = 1 },
]
