[package]
name = "my-canister-frontend"
version = "0.1.3"
description = "Frontend asset utilities Canister Dapps"
documentation = "https://docs.rs/my-canister-frontend"
readme = "README.md"
keywords = ["internet-computer", "canister", "frontend", "assets", "dapp"]
categories = ["web-programming", "development-tools"]
edition = { workspace = true }
license = { workspace = true }
authors = { workspace = true }
repository = "https://github.com/Web3NL/my-canister-dapp/tree/main/my-canister-dapp-rs/my-canister-frontend"

[lib]
crate-type = ["rlib"]

[dependencies]
ic-asset-certification = { workspace = true }
ic-http-certification = { workspace = true }
ic-cdk = { workspace = true }
include_dir = { workspace = true }
mime_guess = { workspace = true }

[package.metadata.release]
pre-release-replacements = [
    # Replace the "Unreleased" header with the new version and date
    { file = "CHANGELOG.md", search = "## \\[Unreleased\\]", replace = "## [{{version}}] - {{date}}", exactly = 1 },

    # Optional: keep an "Unreleased" section at the top after tagging
    { file = "CHANGELOG.md", search = "(?m)^# Changelog\\n", replace = "# Changelog\n\n## [Unreleased]\n", exactly = 1 },
]
