[package]
name = "demos-test"
version = "0.1.0"
edition = { workspace = true }
license = { workspace = true }
authors = { workspace = true }
publish = false

[[bin]]
name = "demos-test"
path = "src/main.rs"

[dependencies]
candid = { workspace = true }
pocket-ic = { workspace = true }
serde = { workspace = true }
