[package]
name = "my-canister-dapp-cli"
version = "0.1.0"
description = "CLI for deploying and testing user-owned dapps on the Internet Computer"
readme = "README.md"
documentation = "https://docs.rs/my-canister-dapp-cli"
keywords = ["internet-computer", "canister", "cli", "deploy", "dapp"]
categories = ["command-line-utilities", "development-tools"]
edition = { workspace = true }
license = { workspace = true }
authors = { workspace = true }
repository = "https://github.com/Web3NL/my-canister-dapp/tree/main/packages-rs/my-canister-dapp-cli"

[[bin]]
name = "dapp"
path = "src/main.rs"

[dependencies]
my-canister-dapp-test = { workspace = true }
clap = { workspace = true }
anyhow = { workspace = true }
tiny_http = { workspace = true }
open = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
flate2 = { workspace = true }
tempfile = { workspace = true }

[package.metadata.release]
pre-release-replacements = [
    # Replace the "Unreleased" header with the new version and date
    { file = "CHANGELOG.md", search = "## \\[Unreleased\\]", replace = "## [{{version}}] - {{date}}", exactly = 1 },

    # Optional: keep an "Unreleased" section at the top after tagging
    { file = "CHANGELOG.md", search = "(?m)^# Changelog\\n", replace = "# Changelog\n\n## [Unreleased]\n", exactly = 1 },
]
