[package]
name = "my-canister-dapp-test"
version = "1.0.0"
description = "Acceptance suite for WASM binaries built with my-canister-dashboard"
readme = "README.md"
documentation = "https://docs.rs/my-canister-dapp-test"
keywords = ["internet-computer", "canister", "testing", "acceptance", "wasm"]
categories = ["development-tools::testing"]
edition = { workspace = true }
license = { workspace = true }
authors = { workspace = true }
repository = "https://github.com/Web3NL/my-canister-dapp/tree/main/packages-rs/my-canister-dapp-test"

[dependencies]
candid = { workspace = true }
hex = { workspace = true }
ic-cdk = { workspace = true }
ic-http-certification = { workspace = true }
ic-ledger-types = { workspace = true }
pocket-ic = { workspace = true }
serde_json = { workspace = true }
sha2 = { workspace = true }

my-canister-dashboard = { path = "../my-canister-dashboard", version = "1" }

[package.metadata.release]
pre-release-replacements = [
    # Replace the "Unreleased" header with the new version and date
    { file = "CHANGELOG.md", search = "## \\[Unreleased\\]", replace = "## [{{version}}] - {{date}}", exactly = 1 },

    # Optional: keep an "Unreleased" section at the top after tagging
    { file = "CHANGELOG.md", search = "(?m)^# Changelog\\n", replace = "# Changelog\n\n## [Unreleased]\n", exactly = 1 },
]
