[package]
name = "my-canister-dashboard"
version = "1.1.1"
description = "Dashboard assets and management utilities for user-owned dapps on the Internet Computer"
edition = { workspace = true }
license = { workspace = true }
authors = { workspace = true }
repository = "https://github.com/Web3NL/my-canister-dapp/tree/main/packages-rs/my-canister-dashboard"
keywords = ["internet-computer", "canister", "dashboard", "ic", "dfinity"]
categories = ["web-programming", "development-tools"]
readme = "README.md"

[lib]
crate-type = ["rlib"]

[dependencies]
candid.workspace = true
ic-asset-certification.workspace = true
ic-http-certification.workspace = true
ic-cdk.workspace = true
ic-cdk-timers.workspace = true
ic-ledger-types.workspace = true
icrc-ledger-types.workspace = true
include_dir.workspace = true
mime_guess.workspace = true
serde.workspace = true
serde_json.workspace = true
num-traits.workspace = true

[package.metadata.release]
pre-release-replacements = [
  # Replace the "Unreleased" header with the new version and date
  { file = "CHANGELOG.md", search = "## \\[Unreleased\\]", replace = "## [{{version}}] - {{date}}", exactly = 1 },

  # Optional: keep an "Unreleased" section at the top after tagging
  { file = "CHANGELOG.md", search = "(?m)^# Changelog\\n", replace = "# Changelog\n\n## [Unreleased]\n", exactly = 1 },

  # Update the version in package.json for My Canister Dashboard
  { file = "frontend/package.json", search = "\"version\": \".*\"", replace = "\"version\": \"{{version}}\"", exactly = 1 },
]

pre-release-hook = ["sh", "-c", "../../scripts/prebuild-mcd.sh && ../../scripts/add-asset-hash-entry.sh && ../../scripts/rust-lint-format.sh"]
