[package]
name = "my-hello-world"
version = "2.0.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib"]

[dependencies]
candid = "=0.10.14"
ic-cdk = "=0.18.5"
ic-asset-certification = "=3.0.3"
ic-http-certification = "=3.0.3"
include_dir = "=0.7.4"

my-canister-frontend = "=0.1.3"
my-canister-dashboard = { path = "../../../../my-canister-dapp-rs/my-canister-dashboard" }
