[package]
name = "my-hello-world"
version = "5.0.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib"]
path = "src/lib-ng.rs"

[dependencies]
candid.workspace = true
ic-cdk.workspace = true
ic-asset-certification.workspace = true
ic-http-certification.workspace = true
include_dir.workspace = true

my-canister-frontend = { path = "../../../../my-canister-dapp-rs/my-canister-frontend" }
my-canister-dashboard = { path = "../../../../my-canister-dapp-rs/my-canister-dashboard" }
