[package]
name = "my-notepad"
version = "1.0.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
candid.workspace = true
ic-cdk.workspace = true
ic-asset-certification.workspace = true
ic-http-certification.workspace = true
include_dir.workspace = true
serde.workspace = true

my-canister-frontend = { path = "../../../../packages-rs/my-canister-frontend" }
my-canister-dashboard = { path = "../../../../packages-rs/my-canister-dashboard" }
